@@ -45,6 +45,9 @@ plugins {
     // https://github.com/ethauvin/semver-gradle
     alias(libs.plugins.semver)
     alias(libs.plugins.licensereport)
+
+    id("maven-publish")
+    id("version-catalog")
 }
 
 // save version to main resources
@@ -53,7 +56,14 @@ plugins {
 // version with -beta is currently not supported by jpackage (maybe windows --app-version)
 // java.lang.IllegalArgumentException: "Version [3.0.0-beta] contains invalid component [0-beta]"
 semver {
-    properties = "src/main/resources/mzmineversion.properties"
+    def versionFile = getLayout().getProjectDirectory().dir("src/main/resources").file("mzmineversion.properties").getAsFile()
+    properties = versionFile.toString()
+}
+
+catalog {
+    versionCatalog {
+        from(files("$rootDir/gradle/libs.versions.toml"))
+    }
 }
 
 // version is now in version.properties
@@ -113,13 +123,13 @@ repositories {
     mavenCentral()
     // mavenLocal()
     maven { url = "https://repo.maven.apache.org/maven2" }
-    // local libraries
+    // local repo needs to be early before other repos otherwise the resolving of local libs failed
     maven { url = uri("file://" + layout.projectDirectory.dir("../local-repo")) }
     // For jmzml, etc.
     maven { url = "https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/" }
     // For SIRIUS ID modules
     maven { url = "https://bio.informatik.uni-jena.de/repository/libs-oss/" }
-    maven { url = "https://jitpack.io" }
+//    maven { url = "https://jitpack.io" } // should not be used at best - better push local
     maven { url = "https://www.xypron.de/repository/" }
     // For cpdetector
 //    maven { url = "https://nexus.nuiton.org/nexus/content/groups/releases/" }
@@ -139,8 +149,6 @@ ext {
     controlsfxVersion = '11.1.1'
     jmzTabmVersion = "1.0.6"
     jnaVersion = '5.12.1'
-    junitversion = '5.9.1'
-    mockitoversion = '5.8.0'
     jacksonVersion = '2.16.1'
 
     // UUID for upgrades of this package on Windows. Generated by https://www.uuidgenerator.net 
@@ -183,7 +191,6 @@ dependencies {
     implementation(libs.bundles.batik)
     implementation(libs.bundles.okhttp)
     implementation "org.postgresql:postgresql:9.3-1102-jdbc41"
-    implementation "org.rsc.chemspider:chemspider-api:1.0.0"
     implementation "org.freehep:freehep-graphicsio-emf:2.4"
     implementation("eu.hansolo.fx:charts:21.0.7")
     implementation group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
@@ -251,7 +258,8 @@ tasks.withType(JavaCompile) {
 
 tasks.withType(Test) {
     jvmArgs = [
-            "--enable-preview"
+            "--enable-preview",
+            "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration"
     ]
     useJUnitPlatform()
 
@@ -288,6 +296,8 @@ application {
             "--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
             "--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
             "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
+            // required for getting log file
+            '--add-opens=java.logging/java.util.logging=ALL-UNNAMED',
 
             // logging
             "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration"
@@ -405,6 +415,7 @@ runtime {
                    "-enableassertions",
                    "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration",
                    "-Djava.net.useSystemProxies=true",
+                   "--add-opens=java.logging/java.util.logging=ALL-UNNAMED",
                    "--enable-preview",
         ]
     }
@@ -612,3 +623,36 @@ tasks.compileJava.dependsOn(checkLicense, copyLicenseInformationToResources, cop
 // copying must be finished before packaging
 tasks.processResources.dependsOn(copyLicenseInformationToResources, copyLicenseInformationToBuild)
 tasks.processResources.dependsOn(copyLicenseInformationToResources, copyLicenseInformationToBuild)
+
+
+// make sure the publish action is run after the semver plugin has been evaluated,
+// otherwise the version will always be 1.0.0
+afterEvaluate {
+    publishing {
+        publications {
+            register("mzmine-community-package", MavenPublication) {
+                from(components["java"])
+                pom {
+                    name = "mzmine-community"
+                    description = "mzmine-community"
+                    artifactId = "mzmine-community"
+                    url = "https://github.com/mzmine/mzmine"
+                    version = semver.version
+                    developers {
+                        developer {
+                            id = "mzmine"
+                            name = "mzmine"
+                        }
+                    }
+                }
+            }
+
+            register("versionCatalog", MavenPublication) {
+                from(components["versionCatalog"])
+                version = semver.version
+                artifactId = 'mzmine-community-version-catalog'
+                // This is important so the published artifact registers as a .toml file, rather than a library
+            }
+        }
+    }
+}
